Sync .gitignore and MANIFEST.SKIP

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,15 @@
-pm_to_blib
-Makefile
-Makefile.old
+/Makefile
+/Makefile.old
+/blib/
+/pm_to_blib
+*.swp
+*~
 *.tmp
-inc/
-blib
-MANIFEST
-MANIFEST.bak
-SIGNATURE
-META.yml
-cover_db
+*.bak
+/inc/
+/MANIFEST
+/MANIFEST.bak
+/SIGNATURE
+/META.yml
+/cover_db/
+/Config-GitLike-*
